feat: remove useless images, added prettier config, added burger card and burger sections components

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,23 @@
 .flex {
   display: flex;
 }
+
+.wrap {
+  flex-wrap: wrap;
+}
+
+.jc-center {
+  justify-content: center;
+}
+
+.ai-center {
+  align-items: center;
+}
+
+.ta-center {
+  text-align: center;
+}
+
+.row {
+  display: inline-flex;
+}
