--- a/src/components/app-header/app-header.module.scss
+++ b/src/components/app-header/app-header.module.scss
@@ -8,12 +8,21 @@ nav.nav {
   display: flex;
   flex-direction: row;
   align-items: center;
+  margin: 0 auto;
+  justify-content: center;
+  max-width: 1280px;
   & > p {
     @extend %nav-item;
     margin: 0;
   }
   & > ul {
     @extend %nav-item;
+    &:first-child {
+      justify-content: start;
+    }
+    &:last-child {
+      justify-content: end;
+    }
     & > li {
       cursor: pointer;
       color: var(--text-inactive-color);
