feat: added DragIcons && added scrollbar to BurgerConstructor

--- a/src/components/burger-constructor/burger-constructor.module.scss
+++ b/src/components/burger-constructor/burger-constructor.module.scss
@@ -1,6 +1,7 @@
 @import '../../styles/mixins/vertical-scrollbar';
 
-.ingredients {
+.structure {
+  display: flex;
   overflow-y: auto;
   @include scrollbar;
 }
