feat: all class component s-> functional compoents, constants moved in constants.ts
WIP on burger-constructor

--- a/src/components/burger-ingredients/burger-ingredients.module.scss
+++ b/src/components/burger-ingredients/burger-ingredients.module.scss
@@ -1,6 +1,17 @@
 @import '../../styles/mixins/vertical-scrollbar';
 
-.ingredients {
-  overflow-y: auto;
-  @include scrollbar;
+.ingredientsWrapper {
+  width: 600px;
+  & .ingredients {
+    overflow-y: auto;
+    @include scrollbar;
+  }
+}
+
+@media (max-width: 1240px) {
+  .ingredientsWrapper {
+    width: 100%;
+    padding-left: 16px;
+    padding-right: 16px;
+  }
 }
