--- a/src/index.scss
+++ b/src/index.scss
@@ -39,3 +39,39 @@
 div[class^='tab'] {
   flex: 1 1;
 }
+
+.loading {
+  position: absolute;
+  width: 100px;
+  height: 100px;
+  top: 50%;
+  left: 50%;
+  background: transparent;
+  border: 3px solid var(--background-element);
+  border-radius: 50%;
+  transform: translate(-50%, -50%);
+
+  &::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: -3px;
+    left: -3px;
+    border: 3px solid transparent;
+    border-top: 3px solid var(--text-inactive-color);
+    border-right: 3px solid var(--text-inactive-color);
+    border-radius: 50%;
+    filter: drop-shadow(0 0 10px var(--colors-interface-success));
+    animation: border 5s linear infinite;
+  }
+}
+
+@keyframes border {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
