--- a/src/components/burger-ingredients/burger-ingredients-card/burger-ingredients-card.module.scss
+++ b/src/components/burger-ingredients/burger-ingredients-card/burger-ingredients-card.module.scss
@@ -4,6 +4,9 @@
   cursor: pointer;
   transition: filter 0.5s ease;
   &:hover {
-    filter: drop-shadow(2px 2px 5px var(--colors-interface-success));
+    filter: 
+      drop-shadow(0px 0px 16px rgba(51, 51, 255, 0.5))
+      drop-shadow(0px 0px 8px rgba(51, 51, 255, 0.5))
+      drop-shadow(0px 4px 32px rgba(51, 51, 255, 0.75));
   }
 }
