--- a/src/components/modal/modal.module.scss
+++ b/src/components/modal/modal.module.scss
@@ -1,12 +1,13 @@
 .modal {
-  position: absolute;
-  top: 0;
-  z-index: 1;
-  background-color: #1c1c21;
+  background-color: var(--background);
   border: 1px solid rgba(76, 76, 255, 0.2);
-  box-shadow: 0px 24px 32px rgba(0, 0, 0, 0.04), 0px 16px 24px rgba(0, 0, 0, 0.04), 0px 4px 8px rgba(0, 0, 0, 0.04),
-    0px 0px 1px rgba(0, 0, 0, 0.04);
   border-radius: 40px;
-  width: 50%;
-  margin: auto;
+  box-shadow: 0px 24px 32px rgba(0, 0, 0, 0.04), 0px 16px 24px rgba(0, 0, 0, 0.04), 0px 4px 8px rgba(0, 0, 0, 0.04),
+  0px 0px 1px rgba(0, 0, 0, 0.04);
+  left: 50%;
+  max-width: 50%;
+  position: fixed;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1;
 }
