fix: remove inline styles
Closes #3

--- a/src/components/app-header/app-header.module.scss
+++ b/src/components/app-header/app-header.module.scss
@@ -4,6 +4,10 @@
   justify-content: center;
 }
 
+.header {
+  background-color: var(--background);
+}
+
 nav.nav {
   display: flex;
   flex-direction: row;
