--- a/src/index.scss
+++ b/src/index.scss
@@ -49,6 +49,13 @@ div[class^='tab'] {
   }
 }
 
+.input__container {
+  width: 100%;
+  & > .input {
+    width: 100%;
+  }
+}
+
 @keyframes border {
   0% {
     transform: rotate(0deg);
