feat: добавлена Регистрация пользователей, Вход в систему и Запрос токена

--- a/src/components/app-header/app-header.module.scss
+++ b/src/components/app-header/app-header.module.scss
@@ -30,6 +30,10 @@ nav.nav {
     & > li {
       cursor: pointer;
       color: var(--text-inactive-color);
+      & > .link {
+        text-decoration: none;
+        color: inherit;
+      }
       &.selected {
         color: var(--text-primary-color);
       }
