--- a/src/pages/auth/auth.module.scss
+++ b/src/pages/auth/auth.module.scss
@@ -2,7 +2,15 @@
   width: 480px;
 }
 
-.text_link {
-  text-decoration: none;
-  color: var(--colors-interface-accent);
+.text {
+  &_link,
+  &_error {
+    text-decoration: none;
+  }
+  &_link {
+    color: var(--colors-interface-accent);
+  }
+  &_error {
+    color: var(--colors-interface-error);
+  }
 }
