feat: Добавлена страница детальных ингрединетов, добавлена подсветка навигации в меню, доработаны страницы по макетам, Добавлено восстановление пароля

--- a/src/components/app-header/app-header.module.scss
+++ b/src/components/app-header/app-header.module.scss
@@ -34,11 +34,8 @@ nav.nav {
         text-decoration: none;
         color: inherit;
       }
-      &.selected {
-        color: var(--text-primary-color);
-      }
-      &:hover {
-        color: var(--text-primary-color);
+      & p:hover {
+        color: var(--text-primary-color) !important;
       }
     }
   }
